--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,16 @@
 {
-  "scripts": {
-  "start": "node app.js",
- },
-  "name": "BreatheWell - AQI Health Checker",
+  "name": "BreatheWell Pro Health",
   "short_name": "BreatheWell",
-  "description": "Check air quality and get personalized health recommendations",
-  "start_url": "/",
+  "description": "Global Air Quality & Health Advisor",
+  "start_url": "/BreatheWell-MVP./",
   "display": "standalone",
-  "background_color": "#667eea",
-  "theme_color": "#667eea",
-  "orientation": "portrait",
+  "background_color": "#ffffff",
+  "theme_color": "#0078d4",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23667eea'/%3E%3Ctext x='50' y='70' font-size='60' text-anchor='middle' fill='white'%3E🌍%3C/text%3E%3C/svg%3E",
+      "src": "https://cdn-icons-png.flaticon.com/512/2877/2877696.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
-
 }
-
